<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- General Blocking Settings -->
    <PreferenceCategory
        android:title="@string/pref_category_general_blocking"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_enable_blocking"
            android:summary="@string/pref_enable_blocking_summary"
            android:title="@string/pref_enable_blocking_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Spam Number Filters -->
    <PreferenceCategory
        android:title="@string/pref_category_unknown_phone_api"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_filter_lista_spam"
            android:summary="@string/pref_filter_lista_spam_summary"
            android:title="@string/pref_filter_lista_spam_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:entries="@array/language_names"
            android:entryValues="@array/language_values"
            android:key="pref_language"
            android:summary="@string/pref_filter_lista_spam_api_language_summary"
            android:title="@string/pref_filter_lista_spam_api_language_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_renew_api_key"
            android:summary="@string/pref_renew_api_key_summary"
            android:title="@string/pref_renew_api_key_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_tellows_api"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_tellows_api"
            android:summary="@string/pref_filter_tellows_summary"
            android:title="@string/pref_filter_tellows_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:entries="@array/entries_region_preference"
            android:entryValues="@array/entryvalues_region_preference"
            android:key="pref_tellows_country"
            android:summary="@string/pref_filter_tellows_api_country_summary"
            android:title="@string/pref_filter_tellows_api_country_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_truecaller_api"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_truecaller_api"
            android:summary="@string/pref_filter_truecaller_summary"
            android:title="@string/pref_filter_truecaller_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:entries="@array/truecaller_region_display"
            android:entryValues="@array/truecaller_region_code"
            android:key="pref_truecaller_country"
            android:summary="@string/pref_filter_truecaller_api_country_summary"
            android:title="@string/pref_filter_truecaller_api_country_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Pattern Blocking -->
    <PreferenceCategory
        android:title="@string/pref_category_pattern_blocking"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_enable_pattern_blocking"
            android:summary="@string/pref_enable_pattern_blocking_summary"
            android:title="@string/pref_enable_pattern_blocking_title"
            app:iconSpaceReserved="false" />

        <com.addev.listaspam.preferences.PatternListPreference
            android:key="pref_pattern_list"
            android:summary="@string/pref_pattern_list_summary"
            android:title="@string/pref_pattern_list_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Pattern Exception List (Whitelist) -->
    <PreferenceCategory
        android:title="@string/pref_category_pattern_whitelist"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_enable_pattern_whitelisting"
            android:summary="@string/pref_enable_pattern_whitelisting_summary"
            android:title="@string/pref_enable_pattern_whitelisting_title"
            app:iconSpaceReserved="false" />

        <com.addev.listaspam.preferences.PatternExceptionListPreference
            android:key="pref_pattern_exception_list"
            android:summary="@string/pref_pattern_exception_list_summary"
            android:title="@string/pref_pattern_exception_list_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Blocked and Whitelisted Numbers -->
    <PreferenceCategory
        android:title="@string/pref_category_number_list"
        app:iconSpaceReserved="false">

        <com.addev.listaspam.preferences.BlockedNumberListPreference
            android:key="pref_blocked_numbers_list"
            android:summary="@string/pref_blocked_numbers_list_summary"
            android:title="@string/pref_blocked_numbers_list_title"
            app:iconSpaceReserved="false" />

        <com.addev.listaspam.preferences.WhitelistedNumberListPreference
            android:key="pref_whitelisted_numbers_list"
            android:summary="@string/pref_whitelisted_numbers_list_summary"
            android:title="@string/pref_whitelisted_numbers_list_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Other Blocking Options -->
    <PreferenceCategory
        android:title="@string/pref_category_other_options"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_block_non_contacts"
            android:summary="@string/pref_block_non_contacts_summary"
            android:title="@string/pref_block_non_contacts_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_block_hidden_numbers"
            android:summary="@string/pref_block_hidden_numbers_summary"
            android:title="@string/pref_block_hidden_numbers_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_block_international_numbers"
            android:summary="@string/pref_block_international_numbers_summary"
            android:title="@string/pref_block_international_numbers_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_block_stir_shaken_risk"
            android:summary="@string/pref_block_stir_shaken_risk_summary"
            android:title="@string/pref_block_stir_shaken_risk_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_mute_instead_of_block"
            android:summary="@string/pref_mute_instead_of_block_summary"
            android:title="@string/pref_mute_instead_of_block_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_enable_update_check"
            android:summary="@string/pref_enable_update_check_summary"
            android:title="@string/pref_enable_update_check_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Notifications -->
    <PreferenceCategory
        android:title="@string/pref_category_notifications"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_show_notification"
            android:summary="@string/pref_show_notification_summary"
            android:title="@string/pref_show_notification_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
